--- a/htmls/2class.html
+++ b/htmls/2class.html
@@ -28,7 +28,7 @@
     </div> -->
    
       <div class="cap5">
-        <a href="../top.html"> Cap⁵</a>
+        <a href="../index.html"> Cap⁵</a>
       </div>
 
 
@@ -44,8 +44,8 @@
         <ul class="items">
           <li class="menu-item"><a href="../htmls/1class.html">work</a></li>
           <li class="menu-item"><a href="../htmls/2class.html">concept</a></li>
-          <li class="menu-item"><a href="../htmls/4class.html">about us</a></li>
-          <li class="menu-item"><a href="../htmls/3class.html">cast </a></li>
+          <li class="menu-item"><a href="../htmls/3class.html">about us</a></li>
+          <li class="menu-item"><a href="../htmls/4class.html">cast </a></li>
           <!-- <li class="menu-item"><a href="../htmls/4class.html">sns </a></li> -->
         </ul>
      </div>
