--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </header>
 <body>
 <div>
-    <video playsinline muted autoplay onended="location.href='top.html'; " class="main">
+    <video playsinline muted autoplay onended="location.href='htmls/1class.html'; " class="main">
         <source src="op.mp4">
     </video>
 </body>
