--- a/htmls/3class.html
+++ b/htmls/3class.html
@@ -101,6 +101,8 @@
     <a href="https://youtube.com/channel/UCDwoYHcRh_GmVbUpMxWP1Ng">
       youtube＞＞＞＞＞＞＞＞＞＞＞＞＞<br>
     </a>
+  </div>
+  <div class="text2">
     <br> <br> <br>
     <a href="https://www.instagram.com/kim_ra_ra_ra">
       instagram＞＞＞＞＞＞＞＞＞＞＞＞<br>
@@ -110,7 +112,7 @@
     <div class="text1">
       <h2>由来</h2>
       <a>
-        Cap5の意味
+        Cap⁵の意味
         ・Cap「頂点...最高のファッションショーにしたい」
         ・Capi capi「キャピキャピ...お客さんを楽しませたい!そして自分たちも楽しみたい!つまりキャピキャピしたい!」 ・Captivate「魅力する...私たちのショーでお客さんの心を虜にする」 ・Caper「陽気に跳ね飛び回る...元気よくハッピーな気分になれるショーにする」
         ・Capability「可能性・将来性...この団体が発展していくこと。また、スタッフやモデル、見に来てくれたお客さんが       このショーに関わったことで、何か次の一歩に踏み出せるきっかけにつながるように」
