--- a/htmls/2class.html
+++ b/htmls/2class.html
@@ -72,7 +72,7 @@
 
   <div class="concept">
       <!-- <h1>re-make!</h2> -->
-        <h4>concept</h4>
+        <!-- <h4>concept</h4> -->
         <h3>
           不自由でも、未知でも、<br>可能性を見いだし、魅せ続ける、<br>
           <b>今、ここで、生まれ変わる</b>
