--- a/htmls/4class.html
+++ b/htmls/4class.html
@@ -75,13 +75,14 @@
 
 
 
-    <!-- <div class="text1">
+     <div class="text1">
       <h1>cast</h1>
       <a>
-        キャスト60人くらい！！多分
+        現在、62人のcastが在籍しており、
+        モデル局、デザイナー局、演出局、プレス局、メイク局、メディア局の計6局に分かれ、活動しています
       </a>
       <br>
-   </div> -->
+   </div> 
 
          
 
