--- a/htmls/4class.html
+++ b/htmls/4class.html
@@ -218,7 +218,7 @@
        茂木朱里 Akari Motegi 
        
        <b>カメラ</b>
-       峰村明瑠 Akeru Minemura 
+       <a href="https://www.instagram.com/kim_ra_ra_ra" style="text-decoration:none; color:#000000;">峰村明瑠 Akeru Minemura </a>
        小林瞭子 Ryoko Kobayashi 
        船木梨里花 Ririka Funaki 
        三浦光梨 Hikari Miura
