文字大きさ

--- a/htmls/2class.html
+++ b/htmls/2class.html
@@ -75,7 +75,9 @@
         <!-- <h4>concept</h4> -->
         <h3>
           不自由でも、未知でも、<br>可能性を見いだし、魅せ続ける、<br>
-          <b>今、ここで、生まれ変わる</b>
+          <b>
+            今、ここで、生まれ変わる
+          </b>
           <br>
         </h3>
       <a>
@@ -105,11 +107,12 @@
       色とりどりに再び輝きを得た服たち、 不測の事態の中もがき苦悩して再生した Cap5
     </a>
 
-    <h1>  Re-make !した我々が、今ここにあるのです。</h1>
+    <h4>  Re-make !した我々が、今ここにあるのです。</h4>
   
 
 
     <img src="../photos/11.png" 　alt=""   class="photolast"/> 
+    <img src="../photos/14.png" 　alt=""   class="photolast"/> 
 </div>
   
 </body>
