画像追加とパスの修正

--- a/htmls/brawn2.html
+++ b/htmls/brawn2.html
@@ -43,9 +43,9 @@
           <img src="../photos/br/23.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/br/24.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/br/25.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/br/26.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/br/27.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/br/28.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/br/26.jpg" 　alt=""   class="photo"/> 
+          <img src="../photos/br/27.jpg" 　alt=""   class="photo"/> 
+          <img src="../photos/br/28.jpg" 　alt=""   class="photo"/> 
           <img src="../photos/br/29.jpeg" 　alt=""   class="photo"/> 
 
           <p>
