--- a/htmls/green2.html
+++ b/htmls/green2.html
@@ -44,9 +44,9 @@
           <img src="../photos/g/24.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/g/25.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/g/26.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/g/27.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/g/28.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/g/29.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/g/27.jpg" 　alt=""   class="photo"/> 
+          <img src="../photos/g/28.jpg" 　alt=""   class="photo"/> 
+          <img src="../photos/g/29.jpg" 　alt=""   class="photo"/> 
 
           <p>
             One piece → Skirt <br>
