--- a/htmls/black2.html
+++ b/htmls/black2.html
@@ -45,8 +45,8 @@
           <img src="../photos/bl/25.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/bl/26.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/bl/27.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/bl/28.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/bl/29.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/bl/28.JPG" 　alt=""   class="photo"/> 
+          <img src="../photos/bl/29.jpg" 　alt=""   class="photo"/> 
 
           <p>
             Copper wire & Hat →Hat <br>
