--- a/htmls/blue.html
+++ b/htmls/blue.html
@@ -45,7 +45,7 @@
           <img src="../photos/b/15.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/16.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/17.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/b/18.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/b/18.JPG" 　alt=""   class="photo"/> 
           <img src="../photos/b/19.jpeg" 　alt=""   class="photo"/> 
       
           <p>
