--- a/htmls/blue5.html
+++ b/htmls/blue5.html
@@ -43,9 +43,9 @@
           <img src="../photos/b/53.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/54.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/55.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/b/56.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/b/57.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/b/58.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/b/56.JPG" 　alt=""   class="photo"/> 
+          <img src="../photos/b/57.JPG" 　alt=""   class="photo"/> 
+          <img src="../photos/b/58.JPG" 　alt=""   class="photo"/> 
           <img src="../photos/b/59.jpeg" 　alt=""   class="photo"/> 
 
           <p>
