--- a/htmls/white4.html
+++ b/htmls/white4.html
@@ -42,9 +42,9 @@
           <img src="../photos/w/43.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/44.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/45.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/w/46.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/w/47.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/w/48.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/w/46.jpg" 　alt=""   class="photo"/> 
+          <img src="../photos/w/47.jpg" 　alt=""   class="photo"/> 
+          <img src="../photos/w/48.jpg" 　alt=""   class="photo"/> 
           <img src="../photos/w/49.jpeg" 　alt=""   class="photo"/> 
 
           <p>
