--- a/htmls/2class.html
+++ b/htmls/2class.html
@@ -20,6 +20,10 @@
 	<!-- Latest compiled JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+
+
+  <link rel="stylesheet" href="https://use.typekit.net/mfh6aii.css">
+
   </head>
 
   <header>
@@ -70,7 +74,7 @@
 
   
 
-  <div class="concept">
+  <div class="text1">
       <!-- <h1>re-make!</h2> -->
         <!-- <h4>concept</h4> -->
         <h3>
@@ -90,7 +94,7 @@
       <!-- <img src="../photos/13.png" 　alt=""   class="photo"/>   -->
       
   </div>
-  <div class="concept">
+  <div class="text1">
     <!-- <h1>re-make!</h2> -->
 
     <a>
