--- a/htmls/3class.html
+++ b/htmls/3class.html
@@ -23,7 +23,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 
-
+  <link rel="stylesheet" href="https://use.typekit.net/mfh6aii.css">
 </head>
 
 <header>
