--- a/htmls/4class.html
+++ b/htmls/4class.html
@@ -23,7 +23,8 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 
-
+  <link rel="stylesheet" href="https://use.typekit.net/mfh6aii.css">
+  <!-- 上記でフォント追加 -->
 </head>
 
 <header>
