--- a/index.html
+++ b/index.html
@@ -69,10 +69,12 @@
 </header>
 <body>
 <div>
-    <video playsinline muted autoplay onended="location.href='htmls/1class.html'; " class="main">
+    <!-- <video playsinline muted autoplay onended="location.href='htmls/1class.html'; " class="main">
         <source src="op.mp4">
-    </video>
-    
+    </video> -->
+    <video playsinline muted loop class="main">
+      <source src="op.mp4">
+  </video>
 </body>
 <!--
 <footer>
