個人ページフォント

--- a/htmls/purple2.html
+++ b/htmls/purple2.html
@@ -21,7 +21,16 @@
 	<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
 
 
-
+  <script>
+    (function(d) {
+      var config = {
+        kitId: 'knn7oqr',
+        scriptTimeout: 3000,
+        async: true
+      },
+      h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+    })(document);
+  </script>
 </head>
 
 <header>
@@ -50,9 +59,9 @@
           <img src="../photos/p/29.jpg" 　alt=""   class="photo"/> 
 
           <p>
-            Sweetheart & Tulle pannier →襟巻き(この表現で合ってるかわからない)<br>
+            Sweetheart & Tulle pannier →襟巻き<br>
             Skinny pants →Ruffle short pants <br>
-            White cloth→tube top(紫に染めて<br>
+            White cloth→tube top<br>
             Skirt ×3 & Tulle pannier →Ruffled skirt<br>
           </p>
           <p>
