--- a/htmls/3class.html
+++ b/htmls/3class.html
@@ -131,7 +131,8 @@
         Cap⁵の意味<br>
         ・Cap「頂点...最高のファッションショーにしたい」<br>
         ・Capi capi「キャピキャピ...お客さんを楽しませたい!そして自分たちも楽しみたい!つまりキャピキャピしたい!」 <br>
-        ・Captivate「魅力する...私たちのショーでお客さんの心を虜にする」 ・Caper「陽気に跳ね飛び回る...元気よくハッピーな気分になれるショーにする」<br>
+        ・Captivate「魅力する...私たちのショーでお客さんの心を虜にする」<br>
+        ・Caper「陽気に跳ね飛び回る...元気よくハッピーな気分になれるショーにする」<br>
         ・Capability「可能性・将来性...この団体が発展していくこと。また、スタッフやモデル、見に来てくれたお客さんが       このショーに関わったことで、何か次の一歩に踏み出せるきっかけにつながるように」<br>
       </a>
       <br>
@@ -142,18 +143,6 @@
 
   
     <img src="../photos/11.png" 　alt=""   class="photolast"/> 
-    <div class="text1">
-       </a>
-       <役職名簿一覧> 代表
-       山上茉姫 Mahime Yamagami
-       <b>モデル</b>
-       野澤桃華 Momoka Nozawa 千葉廉一 Chiba Renichi
-       菊地 菜穂 Naho Kikuchi
-    
-
-            
-        </a>
-    </div>
     <img src="../photos/14.png" 　alt=""   class="photolast"/> 
 
   
