--- a/htmls/blue3.html
+++ b/htmls/blue3.html
@@ -55,7 +55,7 @@
           <img src="../photos/b/36.JPG" 　alt=""   class="photo"/> 
           <img src="../photos/b/37.JPG" 　alt=""   class="photo"/> 
           <img src="../photos/b/38.JPG" 　alt=""   class="photo"/> 
-          <img src="../photos/b/39.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/b/39.JPG" 　alt=""   class="photo"/> 
 
           <p>
             Denim one piece & Light blue polyester dress→tunic<br>
