--- a/htmls/brawn2.html
+++ b/htmls/brawn2.html
@@ -55,7 +55,7 @@
           <img src="../photos/br/26.jpg" 　alt=""   class="photo"/> 
           <img src="../photos/br/27.jpg" 　alt=""   class="photo"/> 
           <img src="../photos/br/28.jpg" 　alt=""   class="photo"/> 
-          <img src="../photos/br/29.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/br/29.jpg" 　alt=""   class="photo"/> 
 
           <p>
             Duffle coat→Patterned open coat<br>
