--- a/htmls/red2.html
+++ b/htmls/red2.html
@@ -55,7 +55,7 @@
           <img src="../photos/r/26.jpg" 　alt=""   class="photo"/> 
           <img src="../photos/r/27.JPG" 　alt=""   class="photo"/> 
           <img src="../photos/r/28.JPG" 　alt=""   class="photo"/> 
-          <img src="../photos/r/29.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/r/29.JPG" 　alt=""   class="photo"/> 
 
           <p>
             Bustier→Bustier<br>
