--- a/htmls/white4.html
+++ b/htmls/white4.html
@@ -54,7 +54,7 @@
           <img src="../photos/w/46.jpg" 　alt=""   class="photo"/> 
           <img src="../photos/w/47.jpg" 　alt=""   class="photo"/> 
           <img src="../photos/w/48.jpg" 　alt=""   class="photo"/> 
-          <img src="../photos/w/49.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/w/49.jpg" 　alt=""   class="photo"/> 
 
           <p>
             Long denim → Short denim / Bustier <br>
