--- a/htmls/4class.html
+++ b/htmls/4class.html
@@ -67,7 +67,7 @@
 
   
     <div class="insta d-md-block">
-      <a href="https://www.instagram.com/kim_ra_ra_ra">
+      <a href="https://www.instagram.com/cap5.tmu">
         <img class ="ad" src="../photos/insta2.png" alt="インスタ"width="90%"height="90%"/>
       </a>
     </div>
@@ -129,7 +129,7 @@
             <!-- <img src="../photos/10.jpeg" 　alt=""   class="photo"/>  -->
             <img src="../photos/blur/7.jpeg" 　alt=""   class="photo"/> 
             <img src="../photos/blur/8.jpeg" 　alt=""   class="photo"/> 
-            <img src="../photos/blur/11.jpeg" 　alt=""   class="photo"/> 
+            <img src="../photos/blur/11.png" 　alt=""   class="photo"/> 
             
         </div>
         <div class="rane4">
