--- a/htmls/purple.html
+++ b/htmls/purple.html
@@ -46,7 +46,7 @@
 
     <div id="all">    
         <div class="rane1">
-          <img src="../photos/p/10.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/p/10.png" 　alt=""   class="photo"/> 
           <img src="../photos/p/11.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/p/12.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/p/13.jpeg" 　alt=""   class="photo"/> 
