ヘッダーのインスタのリンクの修正

--- a/htmls/3class.html
+++ b/htmls/3class.html
@@ -70,7 +70,7 @@
 
   
     <div class="insta d-md-block">
-      <a href="https://www.instagram.com/kim_ra_ra_ra">
+      <a href="https://www.instagram.com/cap5.tmu">
         <img class ="ad" src="../photos/insta2.png" alt="インスタ"width="90%"height="90%"/>
       </a>
     </div>
@@ -120,7 +120,7 @@
   </div>
   <div class="text2">
     <br> <br> <br>
-    <a href="https://www.instagram.com/kim_ra_ra_ra">
+    <a href="https://www.instagram.com/cap5.tmu">
       instagram＞＞＞＞＞＞＞＞＞＞＞＞<br>
     </a>
     </div>
