--- a/htmls/4class.html
+++ b/htmls/4class.html
@@ -231,7 +231,7 @@
        茂木朱里 Akari Motegi 
        
        <b>カメラ</b>
-       <a href="https://www.instagram.com/kim_ra_ra_ra" style="text-decoration:none; color:#000000;">峰村明瑠 Akeru Minemura </a>
+       <a href="https://www.instagram.com/cap5.tmu" style="text-decoration:none; color:#000000;">峰村明瑠 Akeru Minemura </a>
        小林瞭子 Ryoko Kobayashi 
        船木梨里花 Ririka Funaki 
        三浦光梨 Hikari Miura
