--- a/htmls/2class.html
+++ b/htmls/2class.html
@@ -66,7 +66,7 @@
 
   
     <div class="insta d-md-block">
-      <a href="https://www.instagram.com/kim_ra_ra_ra">
+      <a href="https://www.instagram.com/cap5.tmu">
         <img class ="ad" src="../photos/insta2.png" alt="インスタ"width="90%"height="90%"/>
       </a>
     </div>
