--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 
 <header>
-    <a class="cap5">Cap⁵</a>
+    <a class="cap5" href="index.html">Cap⁵</a>
     <nav class="navbar navbar-expand-md navbar-light fixed-top ml-auto">
       
       <button class="navbar-toggler " data-toggle="collapse" data-target="#nav1">
