--- a/htmls/2class.html
+++ b/htmls/2class.html
@@ -110,14 +110,14 @@
       今回のショー名<b>「Re-make!」</b>には 2 つの意味が込められています。 一つが「今までにやったことのないことに挑戦していきたい」
       という我々 Cap⁵の思い。 もう一つがファッションショーを制作する団体として
       「服の可能性 / 衣装の作り方・魅せ方を改めて考える」という意味です。
-      古着を新しく生まれ変わらせるリメイクは Cap5として新たな試みであり、 さらに進化し生まれ変わっていく我々の第一歩であります。
+      古着を新しく生まれ変わらせるリメイクは Cap⁵として新たな試みであり、 さらに進化し生まれ変わっていく我々の第一歩であります。
       さらに、小テーマについては、洋服たちの持つ個性・
       作り手である我々自身の個性・見てくれる方々の個性...など
       ファッションショーが様々な個性の集合体であることに着目し、
       個々のカラフルな輝きを表現するため
       <b>「色」</b>
       としました。
-      色とりどりに再び輝きを得た服たち、 不測の事態の中もがき苦悩して再生した Cap5
+      色とりどりに再び輝きを得た服たち、 不測の事態の中もがき苦悩して再生した Cap⁵
     </a>
 
     <h4>  Re-make !した我々が、今ここにあるのです。</h4>
