--- a/index.html
+++ b/index.html
@@ -71,10 +71,11 @@
 <div>
     <!-- <video playsinline muted autoplay onended="location.href='htmls/1class.html'; " class="main">
         <source src="op.mp4">
-    </video> -->
-    <video playsinline muted loop class="main">
+    </video>
+    -->
+    <video playsinline muted autoplay loop class="main" >
       <source src="op.mp4">
-  </video>
+    </video>
 </body>
 <!--
 <footer>
