about usにロゴを追加

--- a/htmls/3class.html
+++ b/htmls/3class.html
@@ -113,17 +113,21 @@
       </a>
       <br>
    </div>
+   <!--
    <div class="text2">
-    <a href="https://youtube.com/channel/UCDwoYHcRh_GmVbUpMxWP1Ng">
-      youtube＞＞＞＞＞＞＞＞＞＞＞＞＞<br>
-    </a>
+    <a href="https://youtube.com/channel/UCDwoYHcRh_GmVbUpMxWP1Ng"><img src="../photos/yt_logo.png" width="10%" height="10%"></a>
   </div>
   <div class="text2">
     <br> <br> <br>
-    <a href="https://www.instagram.com/cap5.tmu">
-      instagram＞＞＞＞＞＞＞＞＞＞＞＞<br>
-    </a>
+    <a href="https://www.instagram.com/cap5.tmu"><img src="../photos/ig_logo.png" width="5%" height="5%"></a>
     </div>
+  -->
+
+   <div class="text2">
+    <a href="https://youtube.com/channel/UCDwoYHcRh_GmVbUpMxWP1Ng"><img src="../photos/yt_mono.png" width="10%" height="10%"></a>
+    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;    
+    <a href="https://www.instagram.com/cap5.tmu"><img src="../photos/ig_mono.png" width="5%" height="5%"></a>
+  </div>
          
     <div class="text1">
       <h2>由来</h2>
