--- a/htmls/1class.html
+++ b/htmls/1class.html
@@ -207,7 +207,7 @@
         <a href="../htmls/purple.html">
           <img src="../photos/p/11.jpeg" 　alt=""   class="photo"/> 
           <p>13→</p>
-          <img src="../photos/p/10.jpeg" 　alt=""   class="photo0"/> 
+          <img src="../photos/p/10.png" 　alt=""   class="photo0"/> 
 
         </a>
         <a href="../htmls/purple2.html">
