--- a/htmls/3class.html
+++ b/htmls/3class.html
@@ -124,9 +124,9 @@
   -->
 
    <div class="text2">
-    <a href="https://youtube.com/channel/UCDwoYHcRh_GmVbUpMxWP1Ng"><img src="../photos/yt_mono.png" width="10%" height="10%"></a>
+    <a href="https://youtube.com/channel/UCDwoYHcRh_GmVbUpMxWP1Ng"><img src="../photos/yt_mono.png" class="yt_logo"></a>
     &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;    
-    <a href="https://www.instagram.com/cap5.tmu"><img src="../photos/ig_mono.png" width="5%" height="5%"></a>
+    <a href="https://www.instagram.com/cap5.tmu"><img src="../photos/ig_mono.png" class="ig_logo"></a>
   </div>
          
     <div class="text1">
