--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 </header>
 <body>
-<div>
+<div class="bb">
     <!-- <video playsinline muted autoplay onended="location.href='htmls/1class.html'; " class="main">
         <source src="op.mp4">
     </video>
