ig_logo in header

--- a/htmls/1class.html
+++ b/htmls/1class.html
@@ -84,7 +84,7 @@
   
     <div class="insta d-md-block">
       <a href="https://www.instagram.com/cap5.tmu/">
-        <img class ="ad" src="../photos/ig_logo.png" alt="インスタ"width="90%"height="90%"/>
+        <img class ="ad" src="../photos/insta2.png" alt="インスタ"width="90%"height="90%"/>
       </a>
     </div>
     <div class="youtube d-md-block">
