ロゴサイズ直しなど

--- a/htmls/3class.html
+++ b/htmls/3class.html
@@ -122,15 +122,11 @@
     <a href="https://www.instagram.com/cap5.tmu"><img src="../photos/ig_logo.png" width="5%" height="5%"></a>
     </div>
   -->
-
-   <div class="text2">
-    <a href="https://youtube.com/channel/UCDwoYHcRh_GmVbUpMxWP1Ng"><img src="../photos/yt_mono.png" class="yt_logo"></a>
-    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;    
-    <a href="https://www.instagram.com/cap5.tmu"><img src="../photos/ig_mono.png" class="ig_logo"></a>
-  </div>
+  <img src="../photos/ayumi.png" 　alt=""   class="photo"/> 
+   
          
     <div class="text1">
-      <h2>由来</h2>
+      <h2>meaning</h2>
       <a>
         Cap⁵の意味<br>
         ・Cap「頂点...最高のファッションショーにしたい」<br>
@@ -142,12 +138,16 @@
       <br>
    </div>
     
- 
+   <div class="text2">
+    <a href="https://youtube.com/channel/UCDwoYHcRh_GmVbUpMxWP1Ng"><img src="../photos/yt_mono.png" class="yt_logo"></a>
+    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;    
+    <a href="https://www.instagram.com/cap5.tmu"><img src="../photos/ig_mono.png" class="ig_logo"></a>
+  </div>
    
 
   
     <img src="../photos/11.png" 　alt=""   class="photolast"/> 
-    <img src="../photos/14.png" 　alt=""   class="photolast"/> 
+    <img src="../photos/14.png" 　alt=""   class="photolast2"/> 
 
   
 
