--- a/htmls/purple2.html
+++ b/htmls/purple2.html
@@ -35,7 +35,7 @@
 
 <header>
      
-          <a href="../htmls/1class.html">Back
+          <a href="../htmls/1class.html">＜
     </a>
 </header>
    
