--- a/htmls/red.html
+++ b/htmls/red.html
@@ -32,7 +32,7 @@
 </head>
 
 <header>
-        <a href="../htmls/1class.html">Back
+        <a href="../htmls/1class.html">＜
     </a>
 </header>
    
