--- a/htmls/black0.html
+++ b/htmls/black0.html
@@ -28,7 +28,7 @@
     </div> -->
    
       <div class="cap5">
-        <a href="../index.html"> Back  </a>
+        <a href="../index.html">＜</a>
       </div>
       <!-- <a href="../index.html">cap5.com
       </a> -->
