--- a/htmls/black2.html
+++ b/htmls/black2.html
@@ -34,8 +34,7 @@
 </head>
 
 <header>
-        <a href="../htmls/1class.html">＜
-    </a>
+        <a href="../htmls/1class.html">＜  </a>
 </header>
    
 
