--- a/htmls/2class.html
+++ b/htmls/2class.html
@@ -46,7 +46,8 @@
 
 
 
-    <nav class="navbar navbar-expand-md navbar-light   fixed-top ml-auto">
+    <nav class="navbar navbar-expand-md navbar-dark  fixed-top ml-auto">
+      <!-- navbar-dark  navbar-light  -->
         <!-- <p>
           you
         </p> -->
