--- a/htmls/3class.html
+++ b/htmls/3class.html
@@ -50,7 +50,7 @@
 
 
 
-    <nav class="navbar navbar-expand-md navbar-light   fixed-top ml-auto">
+    <nav class="navbar navbar-expand-md navbar-dark   fixed-top ml-auto">
         <!-- <p>
           you
         </p> -->
