ヘッダー残り

--- a/htmls/1class.html
+++ b/htmls/1class.html
@@ -62,7 +62,7 @@
 
 
 
-    <nav class="navbar navbar-expand-md navbar-light   fixed-top ml-auto">
+    <nav class="navbar navbar-expand-md navbar-dark   fixed-top ml-auto">
         <!-- <p>
           you
         </p> -->
