--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <header>
     <a class="cap5" href="index.html">Cap⁵</a>
-    <nav class="navbar navbar-expand-md navbar-light fixed-top ml-auto">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top ml-auto">
       
       <button class="navbar-toggler " data-toggle="collapse" data-target="#nav1">
          <span class ="navbar-toggler-icon"></span>
