--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <source src="op.mp4">
     </video>
     -->
-    <video playsinline muted autoplay loop class="main" >
+    <video playsinline autoplay muted loop class="main" >
       <source src="op2.mp4">
     </video>
 </body>
