--- a/htmls/4class.html
+++ b/htmls/4class.html
@@ -129,7 +129,7 @@
             <!-- <img src="../photos/10.jpeg" 　alt=""   class="photo"/>  -->
             <img src="../photos/blur/7.jpeg" 　alt=""   class="photo"/> 
             <img src="../photos/blur/8.jpeg" 　alt=""   class="photo"/> 
-            <img src="../photos/blur/11.png" 　alt=""   class="photo"/> 
+          
             
         </div>
         <div class="rane4">
@@ -244,6 +244,7 @@
         </a>
     </div>
     <img src="../photos/11.png" 　alt=""   class="photolast"/> 
+    <img src="../photos/blur/11.png" 　alt=""   class="photolast2"/> 
 
   
 
