--- a/htmls/white.html
+++ b/htmls/white.html
@@ -56,7 +56,7 @@
           <img src="../photos/w/17.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/18.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/19.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/w/110.jpeg" 　alt=""   class="photo"/>
+          <!-- <img src="../photos/w/110.jpeg" 　alt=""   class="photo"/> -->
 
           <p>
             vintage long wedding dress → draped short dress
