ももかのコメント追加

--- a/htmls/purple2.html
+++ b/htmls/purple2.html
@@ -65,7 +65,10 @@
             Skirt ×3 & Tulle pannier →Ruffled skirt<br>
           </p>
           <p>
-            No comment.
+            たくさんの紫色の服を集めては、ギャザーを寄せて、ふんわりとした女性らしいシルエットを演出。
+            大面積を占めるチューブトップスは白い布を柔らかい紫色に染めて作った。
+            スウェットから作ったフリル襟巻きもポイント。
+            さまざまな色・素材を包含し、葛藤しながらもはつらつと生きる女性をイメージした。
           </p>
         </div>  
         
