個人ページの修正

--- a/htmls/purple2.html
+++ b/htmls/purple2.html
@@ -59,10 +59,10 @@
           <img src="../photos/p/29.jpg" 　alt=""   class="photo"/> 
 
           <p>
-            Sweetheart & Tulle pannier →襟巻き<br>
-            Skinny pants →Ruffle short pants <br>
+            Sweetheart & Tulle pannier → neckwear<br>
+            Skinny pants → Ruffle short pants <br>
             White cloth→tube top<br>
-            Skirt ×3 & Tulle pannier →Ruffled skirt<br>
+            Skirt ×3 & Tulle pannier → Ruffled skirt<br>
           </p>
           <p>
             たくさんの紫色の服を集めては、ギャザーを寄せて、ふんわりとした女性らしいシルエットを演出。
