--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
 
 <body>
 <div class="bb">
-    <!-- <video playsinline muted autoplay onended="location.href='htmls/1class.html'; " class="main">
+    <video playsinline  autoplay onended="location.href='htmls/1class.html'; " class="main">
         <source src="op.mp4">
     </video>
-    -->
-    <video playsinline autoplay muted loop class="main">
+   
+    <!-- <video playsinline autoplay muted loop class="main">
       <source src="op.mp4">
-    </video>
+    </video> -->
 </body>
 <!--
 <footer>
@@ -92,3 +92,14 @@
   -->
 </div>
 </html>
+
+
+
+
+
+
+
+
+<!-- <video playsinline autoplay muted loop class="main">
+  <source src="op.mp4">
+</video> -->
