--- a/htmls/white4.html
+++ b/htmls/white4.html
@@ -46,15 +46,16 @@
 
     <div id="all">    
         <div class="rane1">
+          <img src="../photos/w/40.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/41.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/42.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/43.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/44.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/45.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/w/46.jpg" 　alt=""   class="photo"/> 
-          <img src="../photos/w/47.jpg" 　alt=""   class="photo"/> 
-          <img src="../photos/w/48.jpg" 　alt=""   class="photo"/> 
-          <img src="../photos/w/49.jpg" 　alt=""   class="photo"/> 
+          <img src="../photos/w/46.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/w/47.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/w/48.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/w/49.jpeg" 　alt=""   class="photo"/> 
 
           <p>
             Long denim → Short denim / Bustier <br>
