--- a/htmls/black.html
+++ b/htmls/black.html
@@ -54,8 +54,8 @@
           <img src="../photos/bl/15.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/bl/16.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/bl/17.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/bl/18.jpg" 　alt=""   class="photo"/> 
-          <img src="../photos/bl/19.JPG" 　alt=""   class="photo"/> 
+          <img src="../photos/bl/18.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/bl/19.jpeg" 　alt=""   class="photo"/> 
 
           <p>
             Jacket → Outer/ Pants<br>
