--- a/htmls/black3.html
+++ b/htmls/black3.html
@@ -53,9 +53,9 @@
           <img src="../photos/bl/34.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/bl/35.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/bl/36.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/bl/37.JPG" 　alt=""   class="photo"/> 
-          <img src="../photos/bl/38.JPG" 　alt=""   class="photo"/> 
-          <img src="../photos/bl/39.JPG" 　alt=""   class="photo"/> 
+          <img src="../photos/bl/37.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/bl/38.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/bl/39.jpeg" 　alt=""   class="photo"/> 
 
           <p>
             hooded sweatshirt & Solid color sweatshirt & Knit → Tops <br>
