--- a/htmls/blue3.html
+++ b/htmls/blue3.html
@@ -50,12 +50,12 @@
           <img src="../photos/b/31.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/32.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/33.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/b/34.jpg" 　alt=""   class="photo"/> 
-          <img src="../photos/b/35.jpg" 　alt=""   class="photo"/> 
-          <img src="../photos/b/36.JPG" 　alt=""   class="photo"/> 
-          <img src="../photos/b/37.JPG" 　alt=""   class="photo"/> 
-          <img src="../photos/b/38.JPG" 　alt=""   class="photo"/> 
-          <img src="../photos/b/39.JPG" 　alt=""   class="photo"/> 
+          <img src="../photos/b/34.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/b/35.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/b/36.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/b/37.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/b/38.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/b/39.jpeg" 　alt=""   class="photo"/> 
 
           <p>
             Denim one piece & Light blue polyester dress → tunic<br>
