--- a/htmls/purple3.html
+++ b/htmls/purple3.html
@@ -52,11 +52,11 @@
           <img src="../photos/p/32.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/p/33.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/p/34.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/p/35.jpg" 　alt=""   class="photo"/> 
-          <img src="../photos/p/36.jpg" 　alt=""   class="photo"/> 
-          <img src="../photos/p/37.jpg" 　alt=""   class="photo"/> 
-          <img src="../photos/p/38.jpg" 　alt=""   class="photo"/> 
-          <img src="../photos/p/39.jpg" 　alt=""   class="photo"/> 
+          <img src="../photos/p/35.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/p/36.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/p/37.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/p/38.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/p/39.jpeg" 　alt=""   class="photo"/> 
 
           <p>
             Jacket ×2 & Camisole & clothes made from jersey cloth & Hooded sweatshirt → Jacket <br>
