--- a/htmls/red2.html
+++ b/htmls/red2.html
@@ -51,8 +51,8 @@
           <img src="../photos/r/22.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/r/23.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/r/24.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/r/25.jpg" 　alt=""   class="photo"/> 
-          <img src="../photos/r/26.jpg" 　alt=""   class="photo"/> 
+          <img src="../photos/r/25.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/r/26.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/r/27.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/r/28.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/r/29.jpeg" 　alt=""   class="photo"/> 
