--- a/htmls/green3.html
+++ b/htmls/green3.html
@@ -53,9 +53,9 @@
           <img src="../photos/g/34.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/g/35.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/g/36.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/g/37.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/g/38.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/g/39.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/g/37.jpg" 　alt=""   class="photo"/> 
+          <img src="../photos/g/38.jpg" 　alt=""   class="photo"/> 
+          <img src="../photos/g/39.jpg" 　alt=""   class="photo"/> 
 
           <p>
             Patch → Outer/Pants<br>
