--- a/htmls/purple2.html
+++ b/htmls/purple2.html
@@ -54,9 +54,9 @@
           <img src="../photos/p/24.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/p/25.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/p/26.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/p/27.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/p/28.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/p/29.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/p/27.jpg" 　alt=""   class="photo"/> 
+          <img src="../photos/p/28.jpg" 　alt=""   class="photo"/> 
+          <img src="../photos/p/29.jpg" 　alt=""   class="photo"/> 
 
           <p>
             Sweetheart & Tulle pannier → neckwear<br>
