--- a/htmls/white5.html
+++ b/htmls/white5.html
@@ -52,10 +52,10 @@
           <img src="../photos/w/53.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/54.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/55.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/w/56.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/w/57.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/w/58.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/w/59.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/w/56.jpg" 　alt=""   class="photo"/> 
+          <img src="../photos/w/57.jpg" 　alt=""   class="photo"/> 
+          <img src="../photos/w/58.jpg" 　alt=""   class="photo"/> 
+          <img src="../photos/w/59.jpg" 　alt=""   class="photo"/> 
 
           <p>
             Blouse×2 & Lace & Ribbon → blouse<br>
