--- a/htmls/brawn.html
+++ b/htmls/brawn.html
@@ -55,7 +55,7 @@
           <img src="../photos/br/16.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/br/17.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/br/18.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/br/19.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/br/19.jpg" 　alt=""   class="photo"/> 
 
           <p>
             Thick knit×3、Blouse ×2 → One Knit<br>
