Revert "しつこい西森のために変えてやった"
This reverts commit 5e64da43ccb63b905ae46fefae11fa399c8c9898.

--- a/htmls/1class.html
+++ b/htmls/1class.html
@@ -276,7 +276,7 @@
         <a href="../htmls/brawn2.html">
           <img src="../photos/br/21.jpeg" 　alt=""   class="photo"/>   
           <p>24→</p>
-          <img src="../photos/br/20.jpeg" 　alt=""   class="photo0"/> 
+          <img src="../photos/b/20.jpeg" 　alt=""   class="photo0"/> 
         </a>
 
       </div>
