Revert "Merge branch 'master' of https://github.com/basyakue/cap5_remake.github.io"
This reverts commit b569fe52b9a1bd4a085b7cfef20596f7e55ca8d5, reversing
changes made to 5e64da43ccb63b905ae46fefae11fa399c8c9898.

--- a/htmls/black2.html
+++ b/htmls/black2.html
@@ -52,9 +52,9 @@
           <img src="../photos/bl/24.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/bl/25.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/bl/26.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/bl/27.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/bl/28.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/bl/29.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/bl/27.JPG" 　alt=""   class="photo"/> 
+          <img src="../photos/bl/28.JPG" 　alt=""   class="photo"/> 
+          <img src="../photos/bl/29.jpg" 　alt=""   class="photo"/> 
 
           <p>
             Copper wire & Hat → Hat <br>
