--- a/htmls/red2.html
+++ b/htmls/red2.html
@@ -53,9 +53,9 @@
           <img src="../photos/r/24.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/r/25.jpg" 　alt=""   class="photo"/> 
           <img src="../photos/r/26.jpg" 　alt=""   class="photo"/> 
-          <img src="../photos/r/27.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/r/28.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/r/29.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/r/27.JPG" 　alt=""   class="photo"/> 
+          <img src="../photos/r/28.JPG" 　alt=""   class="photo"/> 
+          <img src="../photos/r/29.JPG" 　alt=""   class="photo"/> 
 
           <p>
             Bustier → Bustier<br>
