--- a/htmls/blue.html
+++ b/htmls/blue.html
@@ -54,8 +54,8 @@
           <img src="../photos/b/15.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/16.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/17.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/b/18.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/b/19.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/b/18.JPG" 　alt=""   class="photo"/> 
+          <img src="../photos/b/19.JPG" 　alt=""   class="photo"/> 
       
           <p>
             Denim pants → Boots / Earrings<br>
