--- a/htmls/brawn.html
+++ b/htmls/brawn.html
@@ -54,7 +54,7 @@
           <img src="../photos/br/15.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/br/16.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/br/17.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/br/18.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/br/18.JPG" 　alt=""   class="photo"/> 
           <img src="../photos/br/19.jpg" 　alt=""   class="photo"/> 
 
           <p>
