--- a/htmls/4class.html
+++ b/htmls/4class.html
@@ -92,7 +92,7 @@
       <h1>cast</h1>
       <a>
         現在、62人のcastが在籍しており、
-        モデル局、デザイナー局、演出局、プレス局、メイク局、メディア局の計6局に分かれ、活動しています
+        モデル局、デザイナー局、演出局、プレス局、メイク局、メディア局の計6局に分かれ、活動しています!
       </a>
       <br>
    </div> 
