--- a/htmls/black2.html
+++ b/htmls/black2.html
@@ -60,7 +60,7 @@
             Copper wire & Hat → Hat <br>
             Slacks & Work pants → Pants <br>
             Corduroy shirt ×2 → Shirt Dress<br>
-            Corduroy shirt & Jacket ＋袴 → Jacket<br>
+            Corduroy shirt & Jacket &"Hakama" → Jacket<br>
           </p>
           <p>
             コンセプトはサイバーパンクのディストピアで路頭に迷った人造人間です。
