--- a/htmls/green3.html
+++ b/htmls/green3.html
@@ -63,9 +63,9 @@
             Military gas mask bag → Pants pocket<br>
           </p>
           <p>
-            ミリタリーの古着で統一して、重さのある感じに仕上げた。荒野をサバイブする感じ笑。
+            ミリタリーの古着で統一して、重さのある感じに仕上げた。荒野をサバイブする感じ。
             アウターはトレンチっぽさを意識。
-            ラフシモンズ 2001-2002 AW の雰囲気を少し参考に。
+            <!-- ラフシモンズ 2001-2002 AW の雰囲気を少し参考に。 -->
           </p>
         </div>  
         
