--- a/htmls/white2.html
+++ b/htmls/white2.html
@@ -55,7 +55,7 @@
           <img src="../photos/w/26.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/27.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/28.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/w/29.jpeg" 　alt=""   class="photo"/> 
+          <!-- <img src="../photos/w/29.jpeg" 　alt=""   class="photo"/>  -->
 
           <p>
             T-shirt → Poncho <br>
