--- a/htmls/1class.html
+++ b/htmls/1class.html
@@ -304,21 +304,22 @@
 
   </body>
 
-  <!--
+<!--   
   <footer>
     <nav class="nav2">
       <ul class="menu-item2">
-        <li class="menu-item"><a href="../htmls/purple.html">purple</a></li>
-        <li class="menu-item"><a href="../htmls/blue.html">blue</a></li>
-        <li class="menu-item"><a href="../htmls/red.html">red</a></li>
+        <p>archives</p>
+        <li class="menu-item"><a href="../htmls/purple.html">2001ss</a></li>
+        <li class="menu-item"><a href="../htmls/blue.html">2002fw</a></li>
+        <li class="menu-item"><a href="../htmls/red.html">2002ss</a></li>
         <li class="menu-item"><a href="../htmls/black.html">black </a></li>
         <li class="menu-item"><a href="../htmls/green.html">green </a></li>
         <li class="menu-item"><a href="../htmls/white.html">white </a></li>
         <li class="menu-item"><a href="../htmls/brawn.html">brawn</a></li>
       </ul>
     </nav>
-  </footer>
-  -->
+  </footer> -->
+ 
 </div>
 
 
