--- a/htmls/3class.html
+++ b/htmls/3class.html
@@ -122,11 +122,12 @@
     <a href="https://www.instagram.com/cap5.tmu"><img src="../photos/ig_logo.png" width="5%" height="5%"></a>
     </div>
   -->
+
   <img src="../photos/ayumi.png" 　alt=""   class="photo"/> 
-   
+
          
-    <div class="text1">
-      <h2>meaning</h2>
+    <div class="text2">
+      <h2>Meaning</h2>
       <a>
         Cap⁵の意味<br>
         ・Cap「頂点...最高のファッションショーにしたい」<br>
@@ -137,8 +138,16 @@
       </a>
       <br>
    </div>
+
+
+
+
+
+   <!-- <img src="../photos/ayumi_moji.png" 　alt=""   class="photo"/>  -->
+   <!-- <img src="../photos/ayumi_pic.png" 　alt=""   class="photo"/>  -->
+
     
-   <div class="text2">
+   <div class="text3">
     <a href="https://youtube.com/channel/UCDwoYHcRh_GmVbUpMxWP1Ng"><img src="../photos/yt_mono.png" class="yt_logo"></a>
     &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;    
     <a href="https://www.instagram.com/cap5.tmu"><img src="../photos/ig_mono.png" class="ig_logo"></a>
