画像のパスの修正とabout usの文章の変更

--- a/htmls/blue3.html
+++ b/htmls/blue3.html
@@ -63,7 +63,9 @@
             White Wide Pants → Sahuel pants<br>
           </p>
           <p>
-            No comment.
+            テーマは強く美しい女海賊です。
+            タイトなデニムワンピースにもう１つワンピースの生地を付け足すことで、ひらひらした女性らしいスタイルに仕上げました。
+            どこか親しみやすく、また、かっこよさもある海賊のイメージをこの衣装で伝えられたらと思います。
           </p>
         </div>  
         
