--- a/htmls/black.html
+++ b/htmls/black.html
@@ -55,7 +55,7 @@
           <img src="../photos/bl/16.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/bl/17.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/bl/18.jpg" 　alt=""   class="photo"/> 
-          <img src="../photos/bl/19.JPG" 　alt=""   class="photo"/> 
+          <img src="../photos/bl/19.jpg" 　alt=""   class="photo"/> 
 
           <p>
             Jacket → Outer/ Pants<br>
