faviconの追加とblack2のタイトルの修正

--- a/htmls/1class.html
+++ b/htmls/1class.html
@@ -11,6 +11,7 @@
 
     <link rel='stylesheet'  href='../css/1style.css' type='text/css'/>
     <link rel='stylesheet'  href='../css/bootstrap.min.css' type='text/css'/>
+    <link rel="icon" href="photos/fav_w.ico">
 
 
     <!-- Latest compiled and minified CSS -->
