--- a/htmls/black.html
+++ b/htmls/black.html
@@ -3,7 +3,7 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8" />
-    <title>black1L</title>
+    <title>black1</title>
   
 
     <meta name="X-UA-Compatible" content="IE=Edge">
