--- a/htmls/4class.html
+++ b/htmls/4class.html
@@ -13,6 +13,7 @@
 
     <link rel='stylesheet'  href='../css/4style.css' type='text/css'/>
     <link rel='stylesheet'  href='../css/bootstrap.min.css' type='text/css'/>
+    <link rel="icon" href="photos/fav_w.ico">
 
 
     <!-- Latest compiled and minified CSS -->
