--- a/htmls/2class.html
+++ b/htmls/2class.html
@@ -133,8 +133,12 @@
       <h4>  Re-make !した我々が、今ここにあるのです。</h4>
     </div>
  
+    <hr>
+    <!-- 直線 -->
+    <!-- <hr class="dot" noshade> -->
+    <hr width="80%" noshade>
 
-
+    
   <img src="../photos/11.png" 　alt=""   class="photolast"/> 
   <img src="../photos/14.png" 　alt=""   class="photolast2"/> 
 </body>
