--- a/htmls/4class.html
+++ b/htmls/4class.html
@@ -239,7 +239,12 @@
        添田英紀 Eiki Soeta 
         </a>
     </div>
-    <img src="../photos/blur/11.png" 　alt=""   class="photolast3"/> 
+    <div class="text2">
+    <a>2021.3.27
+    </a>
+  </div>
+
+    <!-- <img src="../photos/blur/11.png" 　alt=""   class="photolast3"/>  -->
     <img src="../photos/11.png" 　alt=""   class="photolast"/> 
     <img src="../photos/12.jpeg" 　alt=""   class="photolast2"/> 
 </body>
