画像の諸々の修正とホバー時の下線の削除

--- a/htmls/1class.html
+++ b/htmls/1class.html
@@ -146,7 +146,7 @@
         <a href="../htmls/black2.html">
           <img src="../photos/bl/21.jpeg" 　alt=""   class="photo"/> 
           <p>05→</p>
-          <img src="../photos/bl/20.jpeg" 　alt=""   class="photo0"/> 
+          <img src="../photos/bl/20.png" 　alt=""   class="photo0"/> 
         
         </a>  
         <a href="../htmls/black3.html">
