--- a/htmls/black2.html
+++ b/htmls/black2.html
@@ -45,7 +45,7 @@
 
     <div id="all">    
         <div class="rane1">
-          <img src="../photos/bl/20.jpeg" 　alt=""   class="photo"/>
+          <img src="../photos/bl/20.png" 　alt=""   class="photo"/>
           <img src="../photos/bl/21.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/bl/22.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/bl/23.jpeg" 　alt=""   class="photo"/> 
