--- a/htmls/white4.html
+++ b/htmls/white4.html
@@ -46,6 +46,7 @@
 
     <div id="all">    
         <div class="rane1">
+          <img src="../photos/w/40.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/41.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/42.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/43.jpeg" 　alt=""   class="photo"/> 
