--- a/htmls/blue4.html
+++ b/htmls/blue4.html
@@ -46,6 +46,7 @@
 
     <div id="all">    
         <div class="rane1">
+          <img src="../photos/b/40.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/41.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/42.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/43.jpeg" 　alt=""   class="photo"/> 
