headのいくつかの修正

--- a/htmls/1class.html
+++ b/htmls/1class.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     
   
- <title>Cap⁵</title>
+    <title>Cap⁵</title>
 
     <link rel='stylesheet'  href='../css/1style.css' type='text/css'/>
     <link rel='stylesheet'  href='../css/bootstrap.min.css' type='text/css'/>
@@ -21,7 +21,7 @@
 	<!-- Latest compiled JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-
+  <link rel="icon" href="../photos/fav_w.ico">
 
 
 
