--- a/htmls/2class.html
+++ b/htmls/2class.html
@@ -21,7 +21,7 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-
+    <link rel="icon" href="../photos/fav_w.ico">
 
     <script>
       (function(d) {
