--- a/htmls/3class.html
+++ b/htmls/3class.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     
   
- <title>about us</title>
+    <title>Cap⁵</title>
 
     <link rel='stylesheet'  href='../css/3style.css' type='text/css'/>
     <link rel='stylesheet'  href='../css/bootstrap.min.css' type='text/css'/>
@@ -23,7 +23,7 @@
 	<!-- Latest compiled JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-
+  <link rel="icon" href="../photos/fav_w.ico">
   <link rel="stylesheet" href="https://use.typekit.net/mfh6aii.css">
 
   <script>
