--- a/htmls/5class.html
+++ b/htmls/5class.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     
   
- <title>about us</title>
+    <title>Cap⁵</title>
 
     <link rel='stylesheet'  href='../css/4style.css' type='text/css'/>
     <link rel='stylesheet'  href='../css/bootstrap.min.css' type='text/css'/>
@@ -21,7 +21,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<!-- Latest compiled JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+  <link rel="icon" href="../photos/fav_w.ico">
 
 </head>
 
