--- a/htmls/red.html
+++ b/htmls/red.html
@@ -9,7 +9,7 @@
     <!-- <meta name="viewport" content="width=device-width,initial-scale=1"> -->
     <link rel='stylesheet'  href='../css/purple.css' type='text/css'/>
     <!-- <link rel='stylesheet'  href='../css/bootstrap.min.css' type='text/css'/> -->
-
+    <link rel="icon" href="../photos/fav_w.ico">
 
     <!-- Latest compiled and minified CSS -->
 	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
