--- a/htmls/ヘッダー雛形.html
+++ b/htmls/ヘッダー雛形.html
@@ -12,7 +12,7 @@
 
     <link rel='stylesheet'  href='../css/4style.css' type='text/css'/>
     <link rel='stylesheet'  href='../css/bootstrap.min.css' type='text/css'/>
-
+    <link rel="icon" href="../photos/fav_w.ico">
 
     <!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
