--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <body>
 <div class="bb">
-    <video playsinline  autoplay onended="location.href='htmls/1class.html'; " class="main">
+    <video playsinline muted autoplay onended="location.href='htmls/1class.html'; " class="main">
         <source src="op.mp4">
     </video>
    
