--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 
 <header>
     <a class="cap5" href="index.html">Cap⁵</a>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top ml-auto">
+    <nav class="navbar navbar-expand-md navbar-light fixed-top ml-auto">
       
       <button class="navbar-toggler " data-toggle="collapse" data-target="#nav1">
          <span class ="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse " id="nav1">
-         <ul class="">
+         <ul class="123">
            <li class="menu-item"><a href="./htmls/1class.html">work</a></li>
            <li class="menu-item"><a href="./htmls/2class.html">concept</a></li>
            <li class="menu-item"><a href="./htmls/3class.html">about us</a></li>
