あまりよくなかったからやめた

--- a/htmls/2class.html
+++ b/htmls/2class.html
@@ -94,6 +94,7 @@
             
             <br>
           </h3>
+          <hr width="90%" noshade>
     </div>
 
 
@@ -133,7 +134,7 @@
       <h4>  Re-make !した我々が、今ここにあるのです。</h4>
     </div>
  
-    <hr>
+    <!-- <hr> -->
     <!-- 直線 -->
     <!-- <hr class="dot" noshade> -->
     <hr width="80%" noshade>
