--- a/htmls/3class.html
+++ b/htmls/3class.html
@@ -104,6 +104,7 @@
 
     <div class="text1">
       <h2>About us</h2>
+      <hr width="90%" noshade>
       <a>
         Cap⁵は、毎年11月に行われる東京都立大学「みやこ祭」と4月に行われる新歓期間内で行われる ファッションショーの企画運営・制作を行っている団体です。
         成立初期の「お客さんとわくわくを共有する」のコンセプトから、「ドキドキわくわくの共有」となり今期は「より多くの人に親しみのあるファッションショーへ」というコンセプトが加わっています。
