--- a/htmls/4class.html
+++ b/htmls/4class.html
@@ -91,6 +91,7 @@
 
      <div class="text1">
       <h1>cast</h1>
+      <hr width="90%" noshade>
       <a>
         現在、62人のcastが在籍しており、
         モデル局、デザイナー局、演出局、プレス局、メイク局、メディア局の計6局に分かれ、活動しています!
@@ -138,7 +139,7 @@
         </div>
     </div>  
     <!-- <img src="../photos/14.png" 　alt=""   class="photolast"/>  -->
-    <div class="text1">
+    <div class="text3">
        </a>
        <役職名簿一覧> 代表
        山上茉姫 Mahime Yamagami
