--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
          <span class ="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse " id="nav1">
-         <ul class="123">
+         <ul class="">
            <li class="menu-item"><a href="./htmls/1class.html">work</a></li>
            <li class="menu-item"><a href="./htmls/2class.html">concept</a></li>
            <li class="menu-item"><a href="./htmls/3class.html">about us</a></li>
