右クリック禁止

--- a/htmls/2class.html
+++ b/htmls/2class.html
@@ -36,7 +36,7 @@
 
   </head>
 
-  <header>
+  <header oncontextmenu="return false;">
     <!-- <div id="dandan">
       <p>画面の右半分左半分を押すことで文字を変更</p>
     </div> -->
@@ -81,7 +81,7 @@
  </header>
 
 
- <body>
+ <body oncontextmenu="return false;">
 
   
 
