--- a/htmls/3class.html
+++ b/htmls/3class.html
@@ -43,7 +43,7 @@
 
 </head>
 
-<header>
+<header oncontextmenu="return false;">
    
     <div class="cap5">
         <a href="../index.html"> Cap⁵</a>
@@ -87,7 +87,7 @@
 
 
 
-<body>
+<body oncontextmenu="return false;">
 
     <!-- <div class="who">
         
