--- a/htmls/4class.html
+++ b/htmls/4class.html
@@ -40,7 +40,7 @@
   <!-- 上記でフォント追加 -->
 </head>
 
-<header>
+<header oncontextmenu="return false;">
    
     <div class="cap5">
         <a href="../index.html"> Cap⁵</a>
@@ -84,7 +84,7 @@
 
 
 
-<body>
+<body oncontextmenu="return false;">
 
 
 
