--- a/htmls/5class.html
+++ b/htmls/5class.html
@@ -25,7 +25,7 @@
 
 </head>
 
-<header>
+<header oncontextmenu="return false;">
 
      
     <div class="cap5">
@@ -80,7 +80,7 @@
 
 
 
-<body>
+<body oncontextmenu="return false;">
 
 
 
