--- a/htmls/black.html
+++ b/htmls/black.html
@@ -33,7 +33,7 @@
 
 </head>
 
-<header>
+<header oncontextmenu="return false;">
         <a href="../htmls/1class.html">＜
     </a>
 </header>
@@ -41,7 +41,7 @@
 
 
 
-<body>
+<body oncontextmenu="return false;">
 
 
     <div id="all">    
