--- a/htmls/black2.html
+++ b/htmls/black2.html
@@ -33,14 +33,14 @@
   </script>
 </head>
 
-<header>
+<header oncontextmenu="return false;">
         <a href="../htmls/1class.html">＜  </a>
 </header>
    
 
 
 
-<body>
+<body oncontextmenu="return false;">
 
 
     <div id="all">    
