--- a/htmls/red.html
+++ b/htmls/red.html
@@ -31,7 +31,7 @@
   </script>
 </head>
 
-<header>
+<header oncontextmenu="return false;">
         <a href="../htmls/1class.html">＜
     </a>
 </header>
@@ -39,7 +39,7 @@
 
 
 
-<body>
+<body oncontextmenu="return false;">
 
 
     <div id="all">    
