--- a/htmls/ヘッダー雛形.html
+++ b/htmls/ヘッダー雛形.html
@@ -24,7 +24,7 @@
 
 </head>
 
-<header>
+<header oncontextmenu="return false;">
 
      
     <div class="cap5">
@@ -73,7 +73,7 @@
 
 
 
-<body>
+<body oncontextmenu="return false;">
 
 
 
