--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 </head>
 
-<header>
+<header oncontextmenu="return false;">
     <a class="cap5" href="index.html">Cap⁵</a>
     <nav class="navbar navbar-expand-md navbar-light fixed-top ml-auto">
       
@@ -67,7 +67,7 @@
     </div>
 </header>
 
-<body>
+<body oncontextmenu="return false;">
 <div class="bb">
     <video playsinline muted autoplay onended="location.href='htmls/1class.html'; " class="main">
         <source src="op.mp4">
