--- a/htmls/1class.html
+++ b/htmls/1class.html
@@ -41,7 +41,7 @@
 
   </head>
 
-  <header>
+  <header oncontextmenu="return false;">
     <!-- <div id="dandan">
       <p>画面の右半分左半分を押すことで文字を変更</p>
     </div> -->
@@ -97,7 +97,7 @@
  </header>
 
 
-  <body>
+  <body oncontextmenu="return false;">
     <!-- <img src="../photos/11.jpeg" 　alt=""   class="logo"/>  -->
     <!-- <img src="../photos/10.jpeg" 　alt=""   class="main"/>  -->
 
