--- a/htmls/black0.html
+++ b/htmls/black0.html
@@ -22,7 +22,7 @@
 
   </head>
 
-  <header>
+  <header oncontextmenu="return false;">
     <!-- <div id="dandan">
       <p>画面の右半分左半分を押すことで文字を変更</p>
     </div> -->
@@ -72,7 +72,7 @@
  </header>
 
 
-  <body>
+  <body oncontextmenu="return false;">
     <img src="../photos/11.jpeg" 　alt=""   class="logo"/> 
     <!-- <img src="../photos/10.jpeg" 　alt=""   class="main"/>  -->
    
