--- a/top.html
+++ b/top.html
@@ -34,7 +34,7 @@
 
   </head>
 
-  <header>
+  <header oncontextmenu="return false;">
 
 
     <!-- <div id="dandan">
@@ -72,7 +72,7 @@
  </header>
 
 
-  <body>
+  <body oncontextmenu="return false;">
     <img src="./photos/11.png" 　alt=""   class="logo"/> 
    <img src="./photos/10.jpeg" 　alt=""   class="main"/> 
 
